--- a/competitions.html
+++ b/competitions.html
@@ -39,36 +39,59 @@
     <main class="main-content">
         <section id="competitions" class="section-dark">
             <h2 class="glitch-text">Competitions & Achievements</h2>
-            <div class="skills-grid">
-                <div class="skill-card">
-                    <i class="fas fa-trophy"></i>
-                    <h3>SSTCTF 2025</h3>
-                    <p>Placed second in the SSTCTF 2025 competition, competing solo after teammates withdrew at the last minute.</p>
+            
+            <!-- Featured International Competition -->
+            <div class="featured-competition-section">
+                <h3 class="section-subtitle">🌍 International Competition</h3>
+                <div class="featured-competition">
+                    <div class="skill-card featured-olympiad">
+                        <div class="olympiad-badge">IN PROGRESS</div>
+                        <i class="fas fa-globe"></i>
+                        <h3>International Cybersecurity Olympiad 2025</h3>
+                        <p>Currently participating in a prestigious 7-day program hosted at NUS, competing against representatives from other countries who flew over for this elite international cybersecurity competition.</p>
+                        <div class="competition-details">
+                            <span><i class="fas fa-map-marker-alt"></i> National University of Singapore</span>
+                            <span><i class="fas fa-calendar"></i> 7-Day Program</span>
+                            <span><i class="fas fa-users"></i> International Representatives</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="skill-card">
-                    <i class="fas fa-award"></i>
-                    <h3>Seibersecc 2024 (National)</h3>
-                    <p>My team achieved fourth place in the national Seibersecc 2024 competition.</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-medal"></i>
-                    <h3>greyCTF</h3>
-                    <p>Achieved top 15% placement in the greyCTF cybersecurity competition, demonstrating strong problem-solving skills across multiple challenge categories.</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-star"></i>
-                    <h3>SSMCTF</h3>
-                    <p>Secured top 13 position in the SSMCTF competition, showcasing expertise in various cybersecurity domains and capture-the-flag challenges.</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-brain"></i>
-                    <h3>Programming & Computational Thinking Challenge (PCTC) 2024</h3>
-                    <p>Achieved distinction in the 2024 Programming & Computational Thinking Challenge, demonstrating strong algorithmic and problem-solving capabilities.</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-lightbulb"></i>
-                    <h3>Programming & Computational Thinking Challenge (PCTC) 2025</h3>
-                    <p>Achieved distinction in the 2025 Programming & Computational Thinking Challenge, continuing to excel in computational thinking and programming skills.</p>
+            </div>
+
+            <!-- Other Competitions -->
+            <div class="other-competitions-section">
+                <h3 class="section-subtitle">Other Achievements</h3>
+                <div class="skills-grid">
+                    <div class="skill-card">
+                        <i class="fas fa-trophy"></i>
+                        <h3>SSTCTF 2025</h3>
+                        <p>Placed second in the SSTCTF 2025 competition, competing solo after teammates withdrew at the last minute.</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fas fa-award"></i>
+                        <h3>Seibersecc 2024 (National)</h3>
+                        <p>My team achieved fourth place in the national Seibersecc 2024 competition.</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fas fa-medal"></i>
+                        <h3>greyCTF</h3>
+                        <p>Achieved top 15% placement in the greyCTF cybersecurity competition, demonstrating strong problem-solving skills across multiple challenge categories.</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fas fa-star"></i>
+                        <h3>SSMCTF</h3>
+                        <p>Secured top 13 position in the SSMCTF competition, showcasing expertise in various cybersecurity domains and capture-the-flag challenges.</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fas fa-brain"></i>
+                        <h3>Programming & Computational Thinking Challenge (PCTC) 2024</h3>
+                        <p>Achieved distinction in the 2024 Programming & Computational Thinking Challenge, demonstrating strong algorithmic and problem-solving capabilities.</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fas fa-lightbulb"></i>
+                        <h3>Programming & Computational Thinking Challenge (PCTC) 2025</h3>
+                        <p>Achieved distinction in the 2025 Programming & Computational Thinking Challenge, continuing to excel in computational thinking and programming skills.</p>
+                    </div>
                 </div>
             </div>
         </section>
