added ICO gold certificate

--- a/competitions.html
+++ b/competitions.html
@@ -45,14 +45,15 @@
                 <h3 class="section-subtitle">🌍 International Competition</h3>
                 <div class="featured-competition">
                     <div class="skill-card featured-olympiad">
-                        <div class="olympiad-badge">IN PROGRESS</div>
-                        <i class="fas fa-globe"></i>
+                        <div class="olympiad-badge gold-winner">🥇 GOLD</div>
+                        <i class="fas fa-trophy"></i>
                         <h3>International Cybersecurity Olympiad 2025</h3>
-                        <p>Currently participating in a prestigious 7-day program hosted at NUS, competing against representatives from other countries who flew over for this elite international cybersecurity competition.</p>
+                        <p>🏆 <strong>GOLD MEDAL WINNER!</strong> Successfully competed in a prestigious 7-day program hosted at NUS against elite representatives from other countries, bringing home the gold medal in this international cybersecurity competition.</p>
                         <div class="competition-details">
                             <span><i class="fas fa-map-marker-alt"></i> National University of Singapore</span>
                             <span><i class="fas fa-calendar"></i> 7-Day Program</span>
-                            <span><i class="fas fa-users"></i> International Representatives</span>
+                            <span><i class="fas fa-medal"></i> Gold Medal Winner</span>
+                            <span><i class="fas fa-certificate"></i> <a href="images/cert.png" target="_blank" class="cert-link">View Certificate</a></span>
                         </div>
                     </div>
                 </div>
